# test_task_itek

./: .env  .env-non-dev  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/data_sources/: models.py
app/data_sources/storages/: user_repository.py
app/migrations/: env.py
app/migrations/versions/: 594efc6aef84_revision1.py
app/pydantic_models/: pydantic_models.py
app/views/: crud_for_users.py
scripts_for_docker/: app.sh
